--- a/files/config/keepalived.conf
+++ b/files/config/keepalived.conf
@@ -5,11 +5,11 @@ global_defs {
    router_id keepalived-node-101
 }
 
-vrrp_script chk_haproxy {
-    script "/opt/apps/keepalived/check_haproxy.sh"
-    interval 5
-    weight 2
-}
+# vrrp_script chk_haproxy {
+#     script "/opt/apps/keepalived/check_haproxy.sh"
+#     interval 5
+#     weight 2
+# }
 
 # 设置一个虚拟路由
 vrrp_instance VI_1 {
@@ -30,10 +30,10 @@ vrrp_instance VI_1 {
     }
     # 设置虚拟 IP 地址，可以设置多个 IP 地址，每行一个
     virtual_ipaddress {
-        192.168.30.255
+        192.168.31.90
     }
 
-    track_script {
-      chk_haproxy
-    }
+    # track_script {
+    #   chk_haproxy
+    # }
 }
