--- a/files/config/haproxy.cfg
+++ b/files/config/haproxy.cfg
@@ -29,6 +29,7 @@ global
 # defaults settings
 #---------------------------------------------------------------------
 defaults
+    # 应用全局的日志设置
     log global
     # 使用4层代理模式，”mode http”为7层代理模式
     mode tcp
@@ -69,6 +70,30 @@ listen status
     stats auth admin:123456 
     stats realm (Haproxy\ statistic)
     stats admin if TRUE
+# 监听 Nacos 的 http
+listen nacos_web
+    bind 0.0.0.0:8848
+    mode http
+    option httplog
+    server web-101 192.168.31.101:8840
+    server web-102 192.168.31.102:8840
+    server web-103 192.168.31.103:8840
+# 监听 Seata 的 http
+listen seata_web
+    bind 0.0.0.0:7091
+    mode http
+    option httplog
+    server web-101 192.168.31.101:7090
+    server web-102 192.168.31.102:7090
+    server web-103 192.168.31.103:7090
+# 监听 ElasticSearch 的 http
+listen es_web
+    bind 0.0.0.0:9201
+    mode http
+    option httplog
+    server web-101 192.168.31.101:9200
+    server web-102 192.168.31.102:9200
+    server web-103 192.168.31.103:9200
 # 监听 rabbitmq 的 web 操作页面
 listen rabbitmq_web
     bind 0.0.0.0:15670
@@ -77,26 +102,73 @@ listen rabbitmq_web
     server web-101 192.168.31.101:15672
     server web-102 192.168.31.102:15672
     server web-103 192.168.31.103:15672
-# 监听rabbimq_cluster
+# 监听 nacos_cluster_grpc_client
+listen nacos_cluster_grpc_client
+    bind 0.0.0.0:9848
+    mode tcp
+    option tcplog
+    # 负载均衡算法
+    # 表示简单的轮询，每个服务器根据权重轮流使用，在服务器的处理时间平均分配的情况下这是最流畅和公平的算法。该算法是动态的，对于实例启动慢的服务器权重会在运行中调整。最大支持4095个后端主机；
+    balance roundrobin
+    #
+    # 连接数最少的服务器优先接收连接。leastconn建议用于长会话服务，例如LDAP、SQL、TSE等，而不适合短会话协议。如HTTP.该算法是动态的，对于实例启动慢的服务器权重会在运行中调整。
+    # leastconn
+    #
+    # 每个服务器根据权重轮流使用，类似roundrobin，但它是静态的，意味着运行时修改权限是无效的。另外，它对服务器的数量没有限制。该算法一般不用；
+    # static-rr
+    #
+    # 对请求源IP地址进行哈希，用可用服务器的权重总数除以哈希值，根据结果进行分配。
+    # 只要服务器正常，同一个客户端IP地址总是访问同一个服务器。如果哈希的结果随可用服务器数量而变化，那么客户端会定向到不同的服务器；该算法一般用于不能插入cookie的Tcp模式。
+    # 它还可以用于广域网上为拒绝使用会话cookie的客户端提供最有效的粘连；该算法默认是静态的，所以运行时修改服务器的权重是无效的，但是算法会根据“hash-type”的变化做调整。
+    # source
+    #
+    # 表示根据请求的URI左端（问号之前）进行哈希，用可用服务器的权重总数除以哈希值，根据结果进行分配。
+    # 只要服务器正常，同一个URI地址总是访问同一个服务器。一般用于代理缓存和反病毒代理，以最大限度的提高缓存的命中率。
+    # 该算法只能用于HTTP后端；该算法一般用于后端是缓存服务器；该算法默认是静态的，所以运行时修改服务器的权重是无效的，但是算法会根据“hash-type”的变化做调整。
+    # uri
+    #
+    # 在HTTP GET请求的查询串中查找<param>中指定的URL参数，基本上可以锁定使用特制的URL到特定的负载均衡器节点的要求；
+    # 该算法一般用于将同一个用户的信息发送到同一个后端服务器；该算法默认是静态的，所以运行时修改服务器的权重是无效的，但是算法会根据“hash-type”的变化做调整。
+    # url_param
+    #
+    # 在每个HTTP请求中查找HTTP头<name>，HTTP头<name>将被看作在每个HTTP请求，并针对特定的节点；如果缺少头或者头没有任何值，则用roundrobin代替；
+    # 该算法默认是静态的，所以运行时修改服务器的权重是无效的，但是算法会根据“hash-type”的变化做调整。
+    # hdr(name)
+    #
+    # 为每个进来的TCP请求查询并哈希RDP cookie<name>；该机制用于退化的持久模式，可以使同一个用户或者同一个会话ID总是发送给同一台服务器。
+    # 如果没有cookie，则使用roundrobin算法代替；该算法默认是静态的，所以运行时修改服务器的权重是无效的，但是算法会根据“hash-type”的变化做调整。
+    # balance rdp-cookie(name)
+    
+    # check inter 5000 每隔五秒对集群做健康检查
+    # rise 3 是 3 次正确认为服务器可用
+    # fall 3 是 3 次失败认为服务器不可用
+    server rabbitmq-101 192.168.31.101:9840 check inter 5000 rise 3 fall 3
+    server rabbitmq-102 192.168.31.102:9840 check inter 5000 rise 3 fall 3
+    server rabbitmq-103 192.168.31.103:9840 check inter 5000 rise 3 fall 3
+# 监听 nacos_cluster_grpc_server
+listen nacos_cluster_grpc_server
+    bind 0.0.0.0:9849
+    mode tcp
+    option tcplog
+    balance roundrobin
+    server rabbitmq-101 192.168.31.101:9841 check inter 5000 rise 3 fall 3
+    server rabbitmq-102 192.168.31.102:9841 check inter 5000 rise 3 fall 3
+    server rabbitmq-103 192.168.31.103:9841 check inter 5000 rise 3 fall 3
+# 监听 seata_cluster_server
+listen seata_cluster_server
+    bind 0.0.0.0:8091
+    mode tcp
+    option tcplog
+    balance roundrobin
+    server rabbitmq-101 192.168.31.101:8090 check inter 5000 rise 3 fall 3
+    server rabbitmq-102 192.168.31.102:8090 check inter 5000 rise 3 fall 3
+    server rabbitmq-103 192.168.31.103:8090 check inter 5000 rise 3 fall 3
+# 监听 rabbitmq_cluster
 listen rabbitmq_cluster
     bind 0.0.0.0:5670
     mode tcp
     option tcplog
-    # 负载均衡算法，简单的轮询
     balance roundrobin
-    # 还支持
-    # balance url_param userid
-    # balance url_param session_id check_post 64
-    # balance hdr(User-Agent)
-    # balance hdr(host)
-    # balance hdr(Host) use_domain_only
-    # balance rdp-cookie
-    # balance leastconn
-    # balance source //ip
-    
-    # check inter 5000 每隔五秒对 mq 集群做健康检查
-    # rise 2 是 2 次正确认为服务器可用
-    # fall 2 是 2 次失败认为服务器不可用
-    server rabbitmq-101 192.168.31.101:5672 check inter 5000 rise 2 fall 2
-    server rabbitmq-102 192.168.31.102:5672 check inter 5000 rise 2 fall 2
-    server rabbitmq-103 192.168.31.103:5672 check inter 5000 rise 2 fall 2
+    server rabbitmq-101 192.168.31.101:5672 check inter 5000 rise 3 fall 3
+    server rabbitmq-102 192.168.31.102:5672 check inter 5000 rise 3 fall 3
+    server rabbitmq-103 192.168.31.103:5672 check inter 5000 rise 3 fall 3
