--- a/files/config/haproxy.cfg
+++ b/files/config/haproxy.cfg
@@ -72,39 +72,39 @@ listen status
     stats admin if TRUE
 # 监听 Nacos 的 http
 listen nacos_web
-    bind 0.0.0.0:8848
+    bind 0.0.0.0:8840
     mode http
     option httplog
-    server web-101 192.168.31.101:8840
-    server web-102 192.168.31.102:8840
-    server web-103 192.168.31.103:8840
+    server server-101 192.168.31.101:8840
+    server server-102 192.168.31.102:8840
+    server server-103 192.168.31.103:8840
 # 监听 Seata 的 http
 listen seata_web
-    bind 0.0.0.0:7091
+    bind 0.0.0.0:7090
     mode http
     option httplog
-    server web-101 192.168.31.101:7090
-    server web-102 192.168.31.102:7090
-    server web-103 192.168.31.103:7090
-# 监听 ElasticSearch 的 http
-listen es_web
-    bind 0.0.0.0:9201
+    server server-101 192.168.31.101:7090
+    server server-102 192.168.31.102:7090
+    server server-103 192.168.31.103:7090
+# 监听 es_cluster_http
+listen es_cluster_http
+    bind 0.0.0.0:9200
     mode http
     option httplog
-    server web-101 192.168.31.101:9200
-    server web-102 192.168.31.102:9200
-    server web-103 192.168.31.103:9200
+    server server-101 192.168.31.101:9200
+    server server-102 192.168.31.102:9200
+    server server-103 192.168.31.103:9200
 # 监听 rabbitmq 的 web 操作页面
 listen rabbitmq_web
-    bind 0.0.0.0:15670
+    bind 0.0.0.0:15672
     mode http
     option httplog
-    server web-101 192.168.31.101:15672
-    server web-102 192.168.31.102:15672
-    server web-103 192.168.31.103:15672
+    server server-101 192.168.31.101:15672
+    server server-102 192.168.31.102:15672
+    server server-103 192.168.31.103:15672
 # 监听 nacos_cluster_grpc_client
 listen nacos_cluster_grpc_client
-    bind 0.0.0.0:9848
+    bind 0.0.0.0:9840
     mode tcp
     option tcplog
     # 负载均衡算法
@@ -142,33 +142,43 @@ listen nacos_cluster_grpc_client
     # check inter 5000 每隔五秒对集群做健康检查
     # rise 3 是 3 次正确认为服务器可用
     # fall 3 是 3 次失败认为服务器不可用
-    server rabbitmq-101 192.168.31.101:9840 check inter 5000 rise 3 fall 3
-    server rabbitmq-102 192.168.31.102:9840 check inter 5000 rise 3 fall 3
-    server rabbitmq-103 192.168.31.103:9840 check inter 5000 rise 3 fall 3
+    server server-101 192.168.31.101:9840 check inter 5000 rise 3 fall 3
+    server server-102 192.168.31.102:9840 check inter 5000 rise 3 fall 3
+    server server-103 192.168.31.103:9840 check inter 5000 rise 3 fall 3
 # 监听 nacos_cluster_grpc_server
 listen nacos_cluster_grpc_server
-    bind 0.0.0.0:9849
+    bind 0.0.0.0:9841
     mode tcp
     option tcplog
     balance roundrobin
-    server rabbitmq-101 192.168.31.101:9841 check inter 5000 rise 3 fall 3
-    server rabbitmq-102 192.168.31.102:9841 check inter 5000 rise 3 fall 3
-    server rabbitmq-103 192.168.31.103:9841 check inter 5000 rise 3 fall 3
+    server server-101 192.168.31.101:9841 check inter 5000 rise 3 fall 3
+    server server-102 192.168.31.102:9841 check inter 5000 rise 3 fall 3
+    server server-103 192.168.31.103:9841 check inter 5000 rise 3 fall 3
 # 监听 seata_cluster_server
 listen seata_cluster_server
-    bind 0.0.0.0:8091
+    bind 0.0.0.0:8090
     mode tcp
     option tcplog
     balance roundrobin
-    server rabbitmq-101 192.168.31.101:8090 check inter 5000 rise 3 fall 3
-    server rabbitmq-102 192.168.31.102:8090 check inter 5000 rise 3 fall 3
-    server rabbitmq-103 192.168.31.103:8090 check inter 5000 rise 3 fall 3
-# 监听 rabbitmq_cluster
-listen rabbitmq_cluster
-    bind 0.0.0.0:5670
+    server server-101 192.168.31.101:8090 check inter 5000 rise 3 fall 3
+    server server-102 192.168.31.102:8090 check inter 5000 rise 3 fall 3
+    server server-103 192.168.31.103:8090 check inter 5000 rise 3 fall 3
+# 监听 es_cluster_tcp
+listen es_cluster_tcp
+    bind 0.0.0.0:9300
     mode tcp
     option tcplog
     balance roundrobin
-    server rabbitmq-101 192.168.31.101:5672 check inter 5000 rise 3 fall 3
-    server rabbitmq-102 192.168.31.102:5672 check inter 5000 rise 3 fall 3
-    server rabbitmq-103 192.168.31.103:5672 check inter 5000 rise 3 fall 3
+    server server-101 192.168.31.101:9300 check inter 5000 rise 3 fall 3
+    server server-102 192.168.31.102:9300 check inter 5000 rise 3 fall 3
+    server server-103 192.168.31.103:9300 check inter 5000 rise 3 fall 3
+# 监听 rabbitmq_amqp_without_tls
+listen rabbitmq_amqp_without_tls
+    bind 0.0.0.0:5672
+    mode tcp
+    option tcplog
+    balance roundrobin
+    server server-101 192.168.31.101:5672 check inter 5000 rise 3 fall 3
+    server server-102 192.168.31.102:5672 check inter 5000 rise 3 fall 3
+    server server-103 192.168.31.103:5672 check inter 5000 rise 3 fall 3
+
