--- a/files/config/haproxy.cfg
+++ b/files/config/haproxy.cfg
@@ -70,41 +70,42 @@ listen status
     stats auth admin:123456 
     stats realm (Haproxy\ statistic)
     stats admin if TRUE
-# 监听 Nacos 的 http
-listen nacos_web
-    bind 0.0.0.0:8840
+
+# 监听 nacos_dashbord
+listen nacos_dashbord
+    bind 0.0.0.0:10668
     mode http
     option httplog
     server server-101 192.168.31.101:8840
     server server-102 192.168.31.102:8840
     server server-103 192.168.31.103:8840
-# 监听 Seata 的 http
-listen seata_web
-    bind 0.0.0.0:7090
+# 监听 seata_dashboard
+listen seata_dashboard
+    bind 0.0.0.0:10494
     mode http
     option httplog
     server server-101 192.168.31.101:7090
     server server-102 192.168.31.102:7090
     server server-103 192.168.31.103:7090
-# 监听 es_cluster_http
-listen es_cluster_http
-    bind 0.0.0.0:9200
+# 监听 elasticsearch_http
+listen elasticsearch_http
+    bind 0.0.0.0:10431
     mode http
     option httplog
     server server-101 192.168.31.101:9200
     server server-102 192.168.31.102:9200
     server server-103 192.168.31.103:9200
-# 监听 rabbitmq 的 web 操作页面
-listen rabbitmq_web
-    bind 0.0.0.0:15672
+# 监听 rabbitmq_management
+listen rabbitmq_management
+    bind 0.0.0.0:10575
     mode http
     option httplog
     server server-101 192.168.31.101:15672
     server server-102 192.168.31.102:15672
     server server-103 192.168.31.103:15672
-# 监听 nacos_cluster_grpc_client
-listen nacos_cluster_grpc_client
-    bind 0.0.0.0:9840
+# 监听 nacos_grpc_client
+listen nacos_grpc_client
+    bind 0.0.0.0:10709
     mode tcp
     option tcplog
     # 负载均衡算法
@@ -145,27 +146,27 @@ listen nacos_cluster_grpc_client
     server server-101 192.168.31.101:9840 check inter 5000 rise 3 fall 3
     server server-102 192.168.31.102:9840 check inter 5000 rise 3 fall 3
     server server-103 192.168.31.103:9840 check inter 5000 rise 3 fall 3
-# 监听 nacos_cluster_grpc_server
-listen nacos_cluster_grpc_server
-    bind 0.0.0.0:9841
+# 监听 nacos_grpc_server
+listen nacos_grpc_server
+    bind 0.0.0.0:10720
     mode tcp
     option tcplog
     balance roundrobin
     server server-101 192.168.31.101:9841 check inter 5000 rise 3 fall 3
     server server-102 192.168.31.102:9841 check inter 5000 rise 3 fall 3
     server server-103 192.168.31.103:9841 check inter 5000 rise 3 fall 3
-# 监听 seata_cluster_server
-listen seata_cluster_server
-    bind 0.0.0.0:8090
+# 监听 seata_server
+listen seata_server
+    bind 0.0.0.0:10535
     mode tcp
     option tcplog
     balance roundrobin
     server server-101 192.168.31.101:8090 check inter 5000 rise 3 fall 3
     server server-102 192.168.31.102:8090 check inter 5000 rise 3 fall 3
     server server-103 192.168.31.103:8090 check inter 5000 rise 3 fall 3
-# 监听 es_cluster_tcp
-listen es_cluster_tcp
-    bind 0.0.0.0:9300
+# 监听 elasticsearch_tcp
+listen elasticsearch_tcp
+    bind 0.0.0.0:10462
     mode tcp
     option tcplog
     balance roundrobin
@@ -174,11 +175,20 @@ listen es_cluster_tcp
     server server-103 192.168.31.103:9300 check inter 5000 rise 3 fall 3
 # 监听 rabbitmq_amqp_without_tls
 listen rabbitmq_amqp_without_tls
-    bind 0.0.0.0:5672
+    bind 0.0.0.0:10574
     mode tcp
     option tcplog
     balance roundrobin
     server server-101 192.168.31.101:5672 check inter 5000 rise 3 fall 3
     server server-102 192.168.31.102:5672 check inter 5000 rise 3 fall 3
     server server-103 192.168.31.103:5672 check inter 5000 rise 3 fall 3
+# 监听 rabbitmq_amqp_with_tls
+listen rabbitmq_amqp_with_tls
+    bind 0.0.0.0:10563
+    mode tcp
+    option tcplog
+    balance roundrobin
+    server server-101 192.168.31.101:5671 check inter 5000 rise 3 fall 3
+    server server-102 192.168.31.102:5671 check inter 5000 rise 3 fall 3
+    server server-103 192.168.31.103:5671 check inter 5000 rise 3 fall 3
 
