--- a/files/config/nginx.some.conf
+++ b/files/config/nginx.some.conf
@@ -76,8 +76,8 @@ http {
     # 开启限制 IP 连接数的时候需要使用
     # limit_zone crawler $binary_remote_addr 10m;
 
-
-    upstream nacos_dashbord {
+    # 注意，名称不能使用`_`否则会代理出错    
+    upstream nacos-dashbord {
         server 127.0.0.1:11668;
         server 127.0.0.1:12668;
         server 127.0.0.1:13668;
@@ -87,11 +87,11 @@ http {
         server_name  localhost;
     
         location / {
-            proxy_pass http://nacos_dashbord/;
+            proxy_pass http://nacos-dashbord/;
         }
     }   
 
-    upstream seata_dashboard {
+    upstream seata-dashboard {
         server 127.0.0.1:11494;
         server 127.0.0.1:12494;
         server 127.0.0.1:13494;
@@ -101,11 +101,11 @@ http {
         server_name  localhost;
     
         location / {
-            proxy_pass http://seata_dashboard/;
+            proxy_pass http://seata-dashboard/;
         }
     }
 
-    upstream elasticsearch_http {
+    upstream elasticsearch-http {
         server 127.0.0.1:11431;
         server 127.0.0.1:12431;
         server 127.0.0.1:13431;
@@ -115,11 +115,11 @@ http {
         server_name  localhost;
     
         location / {
-            proxy_pass http://elasticsearch_http/;
+            proxy_pass http://elasticsearch-http/;
         }
     }   
 
-    upstream rabbitmq_management {
+    upstream rabbitmq-management {
         server 127.0.0.1:11575;
         server 127.0.0.1:12575;
         server 127.0.0.1:13575;
@@ -129,7 +129,7 @@ http {
         server_name  localhost;
     
         location / {
-            proxy_pass http://rabbitmq_management/;
+            proxy_pass http://rabbitmq-management/;
         }
     }   
 
@@ -149,7 +149,7 @@ http {
 
 # TCP 转发
 stream {
-    upstream nacos_grpc_client {
+    upstream nacos-grpc-client {
         server 127.0.0.1:11709 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:12709 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:13709 max_fails=3 fail_timeout=10s;
@@ -158,10 +158,10 @@ stream {
         listen 10709;
         proxy_connect_timeout 20s;
         proxy_timeout 5m;
-        proxy_pass nacos_grpc_client;
+        proxy_pass nacos-grpc-client;
     }
 
-    upstream nacos_grpc_server {
+    upstream nacos-grpc-server {
         server 127.0.0.1:11720 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:12720 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:13720 max_fails=3 fail_timeout=10s;
@@ -170,10 +170,10 @@ stream {
         listen 10720;
         proxy_connect_timeout 20s;
         proxy_timeout 5m;
-        proxy_pass nacos_grpc_server;
+        proxy_pass nacos-grpc-server;
     }
 
-    upstream seata_server {
+    upstream seata-server {
         server 127.0.0.1:11535 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:12535 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:13535 max_fails=3 fail_timeout=10s;
@@ -182,10 +182,10 @@ stream {
         listen 10535;
         proxy_connect_timeout 20s;
         proxy_timeout 5m;
-        proxy_pass seata_server;
+        proxy_pass seata-server;
     }
 
-    upstream elasticsearch_tcp {
+    upstream elasticsearch-tcp {
         server 127.0.0.1:11462 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:12462 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:13462 max_fails=3 fail_timeout=10s;
@@ -194,10 +194,10 @@ stream {
         listen 10462;
         proxy_connect_timeout 20s;
         proxy_timeout 5m;
-        proxy_pass elasticsearch_tcp;
+        proxy_pass elasticsearch-tcp;
     }
 
-    upstream rabbitmq_amqp_without_tls {
+    upstream rabbitmq-amqp-without-tls {
         server 127.0.0.1:11574 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:12574 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:13574 max_fails=3 fail_timeout=10s;
@@ -206,10 +206,10 @@ stream {
         listen 10574;
         proxy_connect_timeout 20s;
         proxy_timeout 5m;
-        proxy_pass rabbitmq_amqp_without_tls; 
+        proxy_pass rabbitmq-amqp-without-tls; 
     }
 
-    upstream rabbitmq_amqp_with_tls {
+    upstream rabbitmq-amqp-with-tls {
         server 127.0.0.1:11563 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:12563 max_fails=3 fail_timeout=10s;
         server 127.0.0.1:13563 max_fails=3 fail_timeout=10s;
@@ -218,7 +218,7 @@ stream {
         listen 10563;
         proxy_connect_timeout 20s;
         proxy_timeout 5m;
-        proxy_pass rabbitmq_amqp_with_tls; 
+        proxy_pass rabbitmq-amqp-with-tls; 
     }
 
 }
