--- a/files/config/haproxy.cfg
+++ b/files/config/haproxy.cfg
@@ -103,6 +103,14 @@ listen rabbitmq_management
     server server-101 192.168.31.101:15672
     server server-102 192.168.31.102:15672
     server server-103 192.168.31.103:15672
+# 监听 zipkin_dashboard
+listen zipkin_dashboard
+    bind 0.0.0.0:10527
+    mode http
+    option httplog
+    server server-101 192.168.31.101:9411
+    server server-102 192.168.31.102:9411
+    server server-103 192.168.31.103:9411
 # 监听 nacos_grpc_client
 listen nacos_grpc_client
     bind 0.0.0.0:10709
