--- a/files/config/nginx.some.conf
+++ b/files/config/nginx.some.conf
@@ -89,7 +89,7 @@ http {
         location / {
             proxy_pass http://nacos-dashbord/;
         }
-    }   
+    }
 
     upstream seata-dashboard {
         server 127.0.0.1:11494;
@@ -117,7 +117,7 @@ http {
         location / {
             proxy_pass http://elasticsearch-http/;
         }
-    }   
+    }
 
     upstream rabbitmq-management {
         server 127.0.0.1:11575;
@@ -131,7 +131,21 @@ http {
         location / {
             proxy_pass http://rabbitmq-management/;
         }
-    }   
+    }
+
+    upstream zipkin-dashboard {
+        server 127.0.0.1:11527;
+        server 127.0.0.1:12527;
+        server 127.0.0.1:13527;
+    }
+    server {
+        listen       10527;
+        server_name  localhost;
+    
+        location / {
+            proxy_pass http://zipkin-dashboard/;
+        }
+    }
 
     server {
         listen       80;
