--- a/files/config/proftpd.conf
+++ b/files/config/proftpd.conf
@@ -7,19 +7,19 @@ ServerName			"ProFTPD Default Installation"
 # proftpd 运行的方式,有 standalone 和 inetd 
 ServerType			standalone
 # 只有在认证用户之后才显示欢迎信息 
-DeferWelcome    off
+DeferWelcome      off
 DefaultServer			on
 
 # Port 21 is the standard FTP port.
-Port				21
+Port				      21
 
 # Don't use IPv6 support by default.
-UseIPv6				off
+UseIPv6				    off
 
 # 新文件的权限掩码 
 # Umask 022 is a good standard umask to prevent new dirs and files
 # from being group and world writable.
-Umask				022
+Umask				      022
 
 # To prevent DoS attacks, set the maximum number of child processes
 # to 30.  If you need to allow more than 30 concurrent connections
@@ -42,7 +42,7 @@ DefaultRoot ~
 AllowOverwrite		on
 
 # 登陆时允许idle的时间 
-TimeoutLogin 120
+TimeoutLogin         120
 # 登陆后允许idle的时间 
 TimeoutIdle          600
 # 没有数据传输时允许idle的时间
@@ -53,8 +53,10 @@ AllowStoreRestart       on
 # 允许断点续下载
 AllowRetrieveRestart    on
 
-# 指定数据端口的范围 
-PassivePorts 50000 65534
+# 配置则开启被动模式，不配置则为主动模式
+# 指定数据端口的范围
+# PassivePorts 50000 65534
+PassivePorts 11990 11999
 
 MaxClients 100
 # 每个ip只能有两个连接 
@@ -66,12 +68,13 @@ MaxClientsPerUser       1
 AuthOrder mod_auth_file.c mod_auth_unix.c
 AuthUserFile /opt/apps/proftpd/etc/ftpd.passwd
 AuthGroupFile /opt/apps/proftpd/etc/ftpd.group
-DeleteAbortedStores on
-DirFakeGroup on
-DirFakeUser on
-DirFakeMode 0600
+DeleteAbortedStores   on
+# 使用虚拟用户时需要配置
+# DirFakeGroup          on
+# DirFakeUser           on
+# DirFakeMode           0600
 # 用户是否拥有shell,关闭安全
-RequireValidShell off
+RequireValidShell     off
 # 在编译时加入 --enable-nls才能用
 LangOptions PreferServerEncoding
 # 在编译时加入 --enable-nls才能用
@@ -116,34 +119,49 @@ LogFormat       write   "%h %l %u %t "%r/" %s %b"
   #       %i:本次上传的文件数量  
   #       %o:本次下载的文件数量          
   
-  AllowOverwrite	yes			    # 允许文件可以重新写         
+  AllowOverwrite	yes			# 允许文件可以重新写         
   # IdentLookups		off			# 查找客户的远程用户名,关掉节省连接时间         
   ExtendedLog     	/var/log/proftpd/access.log WRITE,READ write # 以write的日志格式记录READ,WRITE的日志         
   ExtendedLog     	/var/log/proftpd/auth.log AUTH auth          # 以auth的日志格式记录AUTH的日志 
 </Global> 
 
+# ALL: 包括所有的 FTP 命令，除了 LOGIN
+# DIRS: 包括 CDUP, CWD, LIST, MDTM, MLSD, MLST, NLST, PWD, RNFR, STAT, XCUP, XCWD, XPWD
+# LOGIN: 用户登陆
+# READ: 包括 RETR, SIZE
+# WRITE: 包括 APPE, DELE, MKD, RMD, RNTO, STOR, STOU, XMKD, XRMD
+
 <Limit Login>
   Order deny,allow
-  AllowGroup ftp_groups
+  AllowGroup ftps
+#  AllowUser proftpd
+#  AllowAll
 </Limit>
 
+# 若要将<Limit>应用于SITE命令，则将“SITE”和命令通过下划线（“_”）组合
 # Bar use of SITE CHMOD by default
+# 禁止所有账号使用 chmod 命令
 <Limit SITE_CHMOD>
   DenyAll
+#  AllowUser proftpd
+#  AllowAll
 </Limit>
 
-<Directory /home/proftpd>
-#  <Limit MKD STOR DELE XMKD RNEF RNTO RMD XRMD CWD>
-#    AllowAll
+<Directory ~>
+  <Limit ALL>
+    # AllowAll
+    AllowGroup ftps
+    # AllowUser proftpd
+    DenyAll
+  </Limit>
+#  <Limit WRITE READ>
+#    Order deny,allow
+#    AllowUser proftpd
 #  </Limit>
-  <Limit WRITE READ>
-    Order deny,allow
-    AllowUser proftpd
-  </Limit>
-  <Limit STOR MKD>
-    AllowUser proftpd       # proftpd 用户拥有写权限
-    DenyAll                 # 其他用户无写权限
-  </Limit>
+#  <Limit STOR MKD>
+#    AllowUser proftpd       # proftpd 用户拥有写权限
+#    DenyAll                 # 其他用户无写权限
+#  </Limit>
 </Directory>
 
 # 匿名用户配置
