--- a/files/config/proftpd.conf
+++ b/files/config/proftpd.conf
@@ -3,6 +3,10 @@
 # and a single anonymous login.  It assumes that you have a user/group
 # "nobody" and "ftp" for normal operation and anon.
 
+# proftpd 默认情况下不记录日志
+SyslogLevel       emerg
+SystemLog         /var/log/proftpd/proftpd.log
+
 ServerName			"ProFTPD Default Installation"
 # proftpd 运行的方式,有 standalone 和 inetd 
 ServerType			standalone
