--- a/files/config/nginx.some.conf
+++ b/files/config/nginx.some.conf
@@ -17,22 +17,22 @@ events {
 http {
     include  mime.types;
     default_type  application/octet-stream;
-    
+
     log_format  main '$remote_addr - $remote_user [$time_local] "$request" '
 					 '$status $body_bytes_sent "$http_referer" '
 					 '"$http_user_agent" "$http_x_forwarded_for"';
     access_log on;
-    
+
     access_log /var/log/nginx/access.log  main;
-    
+
     sendfile  on;
-	
+
     autoindex on;
-    
+
     tcp_nopush on;
-     
+
     tcp_nodelay on;
-    
+
     keepalive_timeout 120s 100s;
 
     client_header_buffer_size 4k;
@@ -40,7 +40,7 @@ http {
     large_client_header_buffers 4 16k;
 
     client_max_body_size 8m;
-    
+
     open_file_cache max=65535 inactive=60s;
 
     open_file_cache_valid 80s;
@@ -57,7 +57,7 @@ http {
     # fastcgi_buffers 4 64k;
     # fastcgi_busy_buffers_size 128k;
     # fastcgi_temp_file_write_size 128k;
-    
+
     # gzip 模块设置
     # 开启 gzip 压缩输出
     gzip on;
@@ -68,84 +68,70 @@ http {
     # 压缩版本（默认1.1，前端如果是 squid2.5 请使用 1.0）
     # gzip_http_version 1.0;
     # 压缩等级
-    # gzip_comp_level 2;  
+    # gzip_comp_level 2;
     # 压缩类型，默认就已经包含 textml，所以下面就不用再写了，写上去也不会有问题，但是会有一个 warn。
-    gzip_types text/plain application/x-javascript text/css application/xml;    
+    gzip_types text/plain application/x-javascript text/css application/xml;
     gzip_vary on;
 
     # 开启限制 IP 连接数的时候需要使用
     # limit_zone crawler $binary_remote_addr 10m;
 
-    # 注意，名称不能使用`_`否则会代理出错    
-    upstream nacos-dashbord {
-        server 127.0.0.1:11668;
-        server 127.0.0.1:12668;
-        server 127.0.0.1:13668;
-    }
-    server {
-        listen       10668;
-        server_name  localhost;
-    
-        location / {
-            proxy_pass http://nacos-dashbord/;
-        }
-    }
-
-    upstream seata-dashboard {
-        server 127.0.0.1:11494;
-        server 127.0.0.1:12494;
-        server 127.0.0.1:13494;
-    }
-    server {
-        listen       10494;
-        server_name  localhost;
-    
-        location / {
-            proxy_pass http://seata-dashboard/;
-        }
-    }
-
-    upstream elasticsearch-http {
-        server 127.0.0.1:11431;
-        server 127.0.0.1:12431;
-        server 127.0.0.1:13431;
-    }
-    server {
-        listen       10431;
-        server_name  localhost;
-    
-        location / {
-            proxy_pass http://elasticsearch-http/;
-        }
-    }
-
-    upstream rabbitmq-management {
-        server 127.0.0.1:11575;
-        server 127.0.0.1:12575;
-        server 127.0.0.1:13575;
-    }
-    server {
-        listen       10575;
-        server_name  localhost;
-    
-        location / {
-            proxy_pass http://rabbitmq-management/;
-        }
-    }
-
-    upstream zipkin-dashboard {
-        server 127.0.0.1:11527;
-        server 127.0.0.1:12527;
-        server 127.0.0.1:13527;
-    }
-    server {
-        listen       10527;
-        server_name  localhost;
-    
-        location / {
-            proxy_pass http://zipkin-dashboard/;
-        }
-    }
+    # 注意，名称不能使用`_`否则会代理出错
+    # upstream nacos-dashbord {
+    #     server 192.168.31.101:8840;
+    #     server 192.168.31.102:8840;
+    #     server 192.168.31.103:8840;
+    # }
+    # server {
+    #     listen       10668;
+    #     server_name  localhost;
+    #
+    #     location / {
+    #         proxy_pass http://nacos-dashbord/;
+    #     }
+    # }
+    #
+    # upstream seata-dashboard {
+    #     server 192.168.31.101:7090;
+    #     server 192.168.31.102:7090;
+    #     server 192.168.31.103:7090;
+    # }
+    # server {
+    #     listen       10494;
+    #     server_name  localhost;
+    #
+    #     location / {
+    #         proxy_pass http://seata-dashboard/;
+    #     }
+    # }
+    #
+    # upstream elasticsearch-http {
+    #     server 192.168.31.101:9200;
+    #     server 192.168.31.102:9200;
+    #     server 192.168.31.103:9200;
+    # }
+    # server {
+    #     listen       10431;
+    #     server_name  localhost;
+    #
+    #     location / {
+    #         proxy_pass http://elasticsearch-http/;
+    #     }
+    # }
+    #
+    # upstream rabbitmq-management {
+    #     server 192.168.31.101:15672;
+    #     server 192.168.31.102:15672;
+    #     server 192.168.31.103:15672;
+    # }
+    # server {
+    #     listen       10575;
+    #     server_name  localhost;
+    #
+    #     location / {
+    #         proxy_pass http://rabbitmq-management/;
+    #     }
+    # }
 
     server {
         listen       80;
@@ -158,81 +144,81 @@ http {
             # alisa
         }
     }
-    
+
 }
 
 # TCP 转发
 stream {
-    upstream nacos-grpc-client {
-        server 127.0.0.1:11709 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:12709 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:13709 max_fails=3 fail_timeout=10s;
-    }
-    server {
-        listen 10709;
-        proxy_connect_timeout 20s;
-        proxy_timeout 5m;
-        proxy_pass nacos-grpc-client;
-    }
-
-    upstream nacos-grpc-server {
-        server 127.0.0.1:11720 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:12720 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:13720 max_fails=3 fail_timeout=10s;
-    }
-    server {
-        listen 10720;
-        proxy_connect_timeout 20s;
-        proxy_timeout 5m;
-        proxy_pass nacos-grpc-server;
-    }
-
-    upstream seata-server {
-        server 127.0.0.1:11535 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:12535 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:13535 max_fails=3 fail_timeout=10s;
-    }
-    server {
-        listen 10535;
-        proxy_connect_timeout 20s;
-        proxy_timeout 5m;
-        proxy_pass seata-server;
-    }
-
-    upstream elasticsearch-tcp {
-        server 127.0.0.1:11462 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:12462 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:13462 max_fails=3 fail_timeout=10s;
-    }
-    server {
-        listen 10462;
-        proxy_connect_timeout 20s;
-        proxy_timeout 5m;
-        proxy_pass elasticsearch-tcp;
-    }
-
-    upstream rabbitmq-amqp-without-tls {
-        server 127.0.0.1:11574 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:12574 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:13574 max_fails=3 fail_timeout=10s;
-    }
-    server {
-        listen 10574;
-        proxy_connect_timeout 20s;
-        proxy_timeout 5m;
-        proxy_pass rabbitmq-amqp-without-tls; 
-    }
-
-    upstream rabbitmq-amqp-with-tls {
-        server 127.0.0.1:11563 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:12563 max_fails=3 fail_timeout=10s;
-        server 127.0.0.1:13563 max_fails=3 fail_timeout=10s;
-    }
-    server {
-        listen 10563;
-        proxy_connect_timeout 20s;
-        proxy_timeout 5m;
-        proxy_pass rabbitmq-amqp-with-tls; 
-    }
+    # upstream nacos-grpc-client {
+    #     server 192.168.31.101:9840 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.102:9840 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.103:9840 max_fails=3 fail_timeout=10s;
+    # }
+    # server {
+    #     listen 10709;
+    #     proxy_connect_timeout 20s;
+    #     proxy_timeout 5m;
+    #     proxy_pass nacos-grpc-client;
+    # }
+    #
+    # upstream nacos-grpc-server {
+    #     server 192.168.31.101:9841 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.102:9841 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.103:9841 max_fails=3 fail_timeout=10s;
+    # }
+    # server {
+    #     listen 10720;
+    #     proxy_connect_timeout 20s;
+    #     proxy_timeout 5m;
+    #     proxy_pass nacos-grpc-server;
+    # }
+    #
+    # upstream seata-server {
+    #     server 192.168.31.101:8090 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.102:8090 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.103:8090 max_fails=3 fail_timeout=10s;
+    # }
+    # server {
+    #     listen 10535;
+    #     proxy_connect_timeout 20s;
+    #     proxy_timeout 5m;
+    #     proxy_pass seata-server;
+    # }
+    #
+    # upstream elasticsearch-tcp {
+    #     server 192.168.31.101:9300 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.102:9300 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.103:9300 max_fails=3 fail_timeout=10s;
+    # }
+    # server {
+    #     listen 10462;
+    #     proxy_connect_timeout 20s;
+    #     proxy_timeout 5m;
+    #     proxy_pass elasticsearch-tcp;
+    # }
+    #
+    # upstream rabbitmq-amqp-without-tls {
+    #     server 192.168.31.101:5672 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.102:5672 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.103:5672 max_fails=3 fail_timeout=10s;
+    # }
+    # server {
+    #     listen 10574;
+    #     proxy_connect_timeout 20s;
+    #     proxy_timeout 5m;
+    #     proxy_pass rabbitmq-amqp-without-tls;
+    # }
+    #
+    # upstream rabbitmq-amqp-with-tls {
+    #     server 192.168.31.101:5671 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.102:5671 max_fails=3 fail_timeout=10s;
+    #     server 192.168.31.103:5671 max_fails=3 fail_timeout=10s;
+    # }
+    # server {
+    #     listen 10563;
+    #     proxy_connect_timeout 20s;
+    #     proxy_timeout 5m;
+    #     proxy_pass rabbitmq-amqp-with-tls;
+    # }
 
 }
