--- a/files/scripts/rename/config
+++ b/files/scripts/rename/config
@@ -1,7 +1,10 @@
-C:\Workspaces\Temp\data
+// javac -encoding UTF-8 RenameFile.java
+// java -Xmx128m -Xms128m -Dfile.encoding=UTF-8 RenameFile
+E:\temp\pictures\A7R5\20241109\RAW
 // 匹配模式 --r：正则匹配，--s：字符串匹配
 --s
 // 模式 --d：删除匹配部分，--r：替换匹配部分
---d
+--r
 // 匹配模式 --> 替换字符串
-_DSC --> A7R5_DSC00
+// _DSC --> A7R5_DSC00
+-已增强-NR --> 
