--- a/tools/rename_files/config.json
+++ b/tools/rename_files/config.json
@@ -12,10 +12,10 @@
 // JPG$ --> jpg
 
 {
-  "path": "E:\\Need2Sync\\Pictures\\Camera\\广东\\天河公园\\20250607\\RAW",
-//  "matcher": "^_DSC",
-//  "replace": "A7R5_DSC01",
-  "matcher": "-已增强-NR",
-  "replace": "",
+  "path": "E:\\Need2Sync\\Pictures\\Camera\\广东\\广州大桥\\RAW",
+  "matcher": "^_DSC",
+  "replace": "A7R5_DSC01",
+//  "matcher": "-已增强-NR",
+//  "replace": "",
   "logPath": ".\\"  // 日志输出目录, 默认输出到 path
 }
